# codex

./: .gitignore  README.md  pyproject.toml
src/alloy_assistant/: __init__.py  __main__.py  assistant.py  audio.py  client.py  config.py  conversation.py
tests/: test_client_messages.py  test_config.py  test_conversation.py
